buildscript {
    ext {
        springBootVersion = "2.2.0.M4"
        kotlin_version = '1.3.30'
        coroutines_version = "1.3.0-RC"
        spek_version = "2.0.2"
    }
    repositories {
        maven {url "http://repo.spring.io/milestone"}
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion")
    }
}

plugins {
    id 'org.jetbrains.kotlin.jvm' version '1.3.41'
    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.41'
    id 'com.google.cloud.tools.jib' version '1.0.1'
}

apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'zhi.yest.vk'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

repositories {
    mavenCentral()
    maven { url "http://dl.bintray.com/spekframework/spek" }
    maven { url "https://repo.spring.io/milestone" }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-oauth2-client'
    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'

    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
    implementation 'org.jetbrains.kotlin:kotlin-reflect'
    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-reactive:$coroutines_version"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-reactor:$coroutines_version"
    runtimeOnly 'org.springframework.boot:spring-boot-devtools'

    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.+"
    testImplementation "org.spekframework.spek2:spek-dsl-jvm:$spek_version"
    testRuntimeOnly "org.spekframework.spek2:spek-runner-junit5:$spek_version"
    testImplementation "io.projectreactor:reactor-test"
    testImplementation "org.springframework.boot:spring-boot-starter-test"

    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
}

test {
    useJUnitPlatform()

    testLogging {
        events "passed", "skipped", "failed"
    }
}

compileKotlin {
    kotlinOptions {
        freeCompilerArgs = ['-Xjsr305=strict']
        jvmTarget = '1.8'
    }
}

compileTestKotlin {
    kotlinOptions {
        freeCompilerArgs = ['-Xjsr305=strict']
        jvmTarget = '1.8'
    }
}

jib {
    to {
        image = 'dazzbourgh/friend-finder'
        tags = ['latest']
    }
    container {
        jvmFlags = ['-XX:+UnlockExperimentalVMOptions',
                    '-XX:+UseCGroupMemoryLimitForHeap',
                    '-XX:MaxRAMFraction=1']
    }
}
